force-app/main/default/objects/ScheduleOverride__c/ScheduleOverride__c.object-meta.xml
<CustomObject>
    <label>Schedule Override</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>