force-app/main/default/objects/ScheduleOverride__c/fields/customSchedule__c.field-meta.xml
<CustomField>
    <fullName>customSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Custom Schedule</label>
    <referenceTo>CustomSchedule__c</referenceTo>
    <relationshipLabel>Schedule Overrides</relationshipLabel>
    <relationshipName>ScheduleOverrides</relationshipName>
    <type>Lookup</type>
</CustomField>