force-app/main/default/objects/ScheduleOverride__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>