force-app/main/default/objects/ScheduleOverride__c/fields/negotiatedProduct__c.field-meta.xml
<CustomField>
    <fullName>negotiatedProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Negotiated Product</label>
    <referenceTo>NegotiatedProduct__c</referenceTo>
    <relationshipLabel>Schedule Overrides</relationshipLabel>
    <relationshipName>ScheduleOverrides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>