force-app/main/default/objects/ScheduleOverride__c/fields/RT_Schedule_Override_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Schedule_Override_ID__c</fullName>
    <externalId>true</externalId>
    <label>RT Schedule Override ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>