force-app/main/default/objects/ScheduleOverride__c/fields/scheduleName__c.field-meta.xml
<CustomField>
    <fullName>scheduleName__c</fullName>
    <formula>IF( ISBLANK(standardSchedule__c)  ,  customSchedule__r.Name , standardSchedule__r.Name)</formula>
    <label>scheduleName</label>
    <type>Text</type>
</CustomField>