force-app/main/default/objects/ScheduleOverride__c/fields/standardSchedule__c.field-meta.xml
<CustomField>
    <fullName>standardSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Standard Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Schedule Overrides</relationshipLabel>
    <relationshipName>ScheduleOverrides</relationshipName>
    <type>Lookup</type>
</CustomField>